# ducto

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  lefthook.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
docs/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: architecture.mdx  cli.mdx  configuration.mdx  expressions.mdx  financial-safety.mdx  intro.mdx  storage-backends.mdx
docs/docs/javascript-api/: credit-manager.mdx  index.mdx  pricing-engine.mdx  stores.mdx
docs/docs/notebooks/: 01_pricing_basics.mdx  07_events.mdx
docs/docs/python-api/: credit-manager.mdx  index.mdx  pricing-engine.mdx  stores.mdx
docs/scripts/: conf.py  gen-api-docs.sh  gen-notebook-docs.sh  sphinx-conf.py
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
javascript/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
javascript/src/: breakdown.ts  config.ts  engine.ts  errors.ts  expr.ts  index.ts  load-pricing-file.ts  manager.ts  metrics.ts  node.ts  types.ts
javascript/src/stores/: credit-store.ts  events.ts  memory-store.ts  postgres-store.ts  supabase-store.ts
javascript/tests/: config.test.ts  credit-manager.test.ts  engine.test.ts  events.test.ts  expr.test.ts  lease.test.ts  load-pricing-file.test.ts  memory-store.test.ts  postgres-store.test.ts  store-integration.test.ts  supabase-store.test.ts
memory/: ci-fixes-2025-06-30.md
python/: .dockerignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
python/notebooks/: 01_pricing_basics.ipynb  02_credit_lifecycle.ipynb  03_plans_and_allowances.ipynb  04_analytics.ipynb  05_spend_caps.ipynb  06_teams.ipynb  07_events.ipynb  08_custom_store.ipynb  09_expression_evaluator.ipynb  shared.py
python/scripts/: generate_notebooks.py  pricing-defaults.yaml  seed_pricing.py
python/src/ducto/: __init__.py  __main__.py  breakdown.py  config.py  engine.py  events.py  expr.py  manager.py  metrics.py
python/src/ducto/interface/: __init__.py  base.py  memory.py  models.py  postgres.py  supabase.py
python/src/ducto/sql/: 001_credit_tables.sql  002_credit_rpcs.sql  003_pricing_config.sql  004_user_plans.sql  005_credit_refunds.sql  006_credit_expiry.sql  007_usage_analytics.sql  008_team_balances.sql  009_spend_caps.sql  010_aggregate_stats.sql  011_feature_entitlements.sql  012_list_transactions.sql  013_list_usage_events.sql  014_numeric_money.sql  015_atomic_deduct.sql  016_lease_lifecycle.sql  017_drop_legacy_rpcs.sql  018_billing_fixes.sql  019_settle_skip_allowance.sql  021_settle_lease_floor.sql  021_signup_bonus_config.sql
python/tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_expr.py  test_lease.py  test_lease_adversarial.py  test_manager.py  test_store.py  test_store_integration.py
samples/python/notebooks/: 02_credit_lifecycle.ipynb  04_analytics.ipynb  07_events.ipynb  08_custom_store.ipynb  12_saas_billing_patterns.ipynb
src/ducto/: __init__.py  __main__.py  config.py  manager.py
src/ducto/interface/: memory.py  postgres.py  supabase.py
src/ducto/sql/: __init__.py
tests/: conftest.py  test_store_integration.py
tests/parity/: billing_scenarios.json  expression_cases.json  parity_results_py.json  run_parity.py  run_parity.ts
