[project]
name = "ducto"
version = "0.1.2"
description = "Declarative credit calculation engine for AI SaaS platforms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
]
keywords = ["credits", "billing", "llm", "usage-metering", "pricing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/apoorwv/ducto"
Source = "https://github.com/apoorwv/ducto"
Documentation = "https://github.com/apoorwv/ducto#readme"
Issues = "https://github.com/apoorwv/ducto/issues"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.scripts]
ducto = "ducto.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
supabase = [
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
]
postgres = [
    "psycopg2-binary>=2.9",
]
test = [
    "pytest>=8.0",
    "ruff>=0.15.0",
    "pyright",
    "pytest-testmon>=2.0.0",
    "pytest-postgresql>=7.0",
]

[tool.setuptools.package-data]
ducto = ["sql/*.sql"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "ASYNC", "RUF100", "SIM", "RET", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["UP006"]
"**/test_*.py" = ["SIM", "RET", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "standard"
useLibraryCodeForTypes = false
venvPath = "."
venv = ".venv"
exclude = ["**/__pycache__", "**/.venv/**", "**/.pytest_cache/**"]
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportOptionalMemberAccess = "none"

[tool.coverage.run]
source = ["ducto"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "def __repr__", "raise NotImplementedError"]

[dependency-groups]
dev = [
    "pytest-testmon>=2.2.0",
]
