[project]
name = "ducto"
version = "2.0.0"
description = "Declarative credit calculation engine for AI SaaS platforms"
readme = "README.md"
# Bounded to the advertised 3.11–3.13 range (M13). decimal-based money math is
# stdlib, so no new runtime dependency is needed.
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
]
keywords = ["credits", "billing", "llm", "usage-metering", "pricing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://apoorwv.github.io/ducto/"
Source = "https://github.com/apoorwv/ducto"
Documentation = "https://apoorwv.github.io/ducto/"
Issues = "https://github.com/apoorwv/ducto/issues"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.scripts]
ducto = "ducto.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
# Supabase store talks to the REST API over httpx only — it does NOT need a
# direct Postgres driver (M13). psycopg2 belongs to the `postgres` extra.
supabase = [
    "httpx>=0.28.1",
]
postgres = [
    "psycopg2-binary>=2.9.12",
]
# Single source of truth for dev/test dependencies (M13). The duplicate
# `[dependency-groups].dev` block was removed to end the version skew.
test = [
    "pytest>=8.0",
    "ruff>=0.15.0",
    "pyright>=1.1.390",
    "pytest-testmon>=2.2.0",
    "pytest-postgresql>=7.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pyyaml>=6.0.3",
]

[tool.setuptools.package-data]
ducto = ["sql/*.sql"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "ASYNC", "RUF100", "SIM", "RET", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["UP006"]
"**/test_*.py" = ["SIM", "RET", "N"]
"scripts/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
# Pin the analysis target so pyright does not false-flag `X | Y` union syntax
# (Phase-1 agents hit this without it). Matches the floor of requires-python.
pythonVersion = "3.11"
typeCheckingMode = "standard"
useLibraryCodeForTypes = false
venvPath = "."
venv = ".venv"
exclude = ["**/__pycache__", "**/.venv/**", "**/.pytest_cache/**"]
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportOptionalMemberAccess = "none"

[tool.coverage.run]
source = ["ducto"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "def __repr__", "raise NotImplementedError"]

# Dev group: the editable workflow installs the `test` extra plus the
# notebook/docs tooling below. Test/runtime deps (httpx, psycopg2, testmon) are
# declared ONCE in the `test` extra to avoid the prior version skew (M13).
[dependency-groups]
dev = [
    {include-group = "test-deps"},
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pglite>=1.0.14",
]
# Mirror of the `test` optional-dependency extra for `uv`'s dependency-group
# resolver (extras and groups are separate namespaces in uv).
test-deps = [
    "pytest>=8.0",
    "ruff>=0.15.0",
    "pyright>=1.1.390",
    "pytest-testmon>=2.2.0",
    "pytest-postgresql>=7.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pyyaml>=6.0.3",
]
